--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dojoengine/core": "^0.0.4",
+    "@dojoengine/react": "^0.0.3",
     "@latticexyz/recs": "^1.43.0",
     "@latticexyz/utils": "^1.43.0",
+    "events": "^3.3.0",
     "ethers": "^5.7.2",
+    "micro-starknet": "^0.2.3",
     "mobx": "^6.9.0",
     "proxy-deep": "^3.1.1",
     "react": "^18.2.0",
